--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/smoothscroll-polyfill": "^0.3.1",
+    "classnames": "^2.3.1",
+    "node-sass": "^4.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^16.14.0",
+    "react-use": "^17.3.1",
+    "smoothscroll-polyfill": "^0.4.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
